--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -1,41 +1,66 @@
 ---
+import Spinner from "../components/Spinner.astro";
 import AuthLayout from "../layouts/AuthLayout.astro";
 ---
 
 <AuthLayout title="Inicia Sesión | PPAM Malabo">
-    <h1 class="text-center text-4xl font-bold mt-10">
-        Inicia sesión para el PPAM de Malabo
+    <h1 class="text-center text-lg font-semibold">
+        PPAM Malabo
     </h1>
-    <form action="" class="mt-20 px-20 flex flex-col gap-5 justify-center">
-        <input
-            name="email"
-            class="w-full h-10 border-2 border-blue-500 p-5"
-            type="text"
-            placeholder="Correo"
-        />
-        <input
-            name="password"
-            class="w-full h-10 border-2 border-blue-500 p-5"
-            type="password"
-            placeholder="Contraseña"
-        />
-        <button
-            class="bg-blue-500 py-2 text-white rounded-md disabled:bg-gray-300"
-            type="submit"
-            id="btnSubmit">Iniciar sesión</button
-        >
-    </form>
+    <h3 class="text-center text-4xl font-bold w-1/2 mx-auto text-pretty">Bienvenido a la página de el PPAM de Malabo</h3>
+    <div class="max-w-5xl mx-auto mt-5 bg-white p-5 rounded-lg shadow-lg ">
+        <form class="space-y-4 w-full">
+            <div class="space-y-2">
+                <label for="email" class="text-gray-700">Tu correo</label>
+                <input
+                    name="email"
+                    class="w-full h-10 border-2 border-gray-500 p-5 rounded-lg focus:border-cyan-600"
+                    type="text"
+                    id="email"
+                    placeholder="correo@gmail.com"
+                />
+            </div>
+            <div class="space-y-2">
+                <label for="password" class="text-gray-700">Tu contraseña</label>
+                <input
+                    name="password"
+                    class="w-full h-10 border-2 border-gray-500 p-5 rounded-lg focus:border-cyan-600"
+                    type="password"
+                    id="password"
+                    placeholder="******"
+                />
+            </div>
+            <button
+                class="bg-cyan-600 py-2 text-white rounded-md w-full hover:bg-cyan-700 transition-colors"
+                type="submit"
+                id="btnSubmit">
+                <Spinner classList="w-6 h-6 mx-auto hidden" id="login-spinner"/>
+                <span class="text-center" id="login-btn-text">
+                    Iniciar sesión
+                </span>
+            </button>
+        </form>
+
+        <p class="mt-5 text-gray-600 text-md">¿Aún no tienes una cuenta?</p>
+        <a class="text-cyan-600 font-semibold underline hover:text-cyan-700 transition-colors" href="/signup">Crear cuenta</a>
+    </div>
 </AuthLayout>
 
 <script>
     const form = document.querySelector("form") as HTMLFormElement;
+    const spinner = document.querySelector('#login-spinner');
     const btnSubmit = document.querySelector("#btnSubmit") as HTMLButtonElement;
+    const loginText = document.querySelector("#login-btn-text") as HTMLSpanElement;
 
     const { signIn } = await import("auth-astro/client");
 
     form.addEventListener("submit", async (e) => {
         e.preventDefault();
         btnSubmit.setAttribute("disabled", "true");
+        loginText.classList.add('hidden')
+        spinner.classList.remove('hidden')
+
+        
         const formData = new FormData(form);
 
         try {
@@ -50,10 +75,14 @@ import AuthLayout from "../layouts/AuthLayout.astro";
             } else {
                 console.log("Correo o contraseña incorrectos");
                 btnSubmit.removeAttribute("disabled");
+                loginText.classList.remove('hidden')
+                spinner.classList.add('hidden')
             }
         } catch (error) {
             console.error("Error en la autenticación:", error);
             btnSubmit.removeAttribute("disabled");
+            loginText.classList.remove('hidden')
+            spinner.classList.add('hidden')
         }
     });
 </script>
