--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -1,20 +1,22 @@
 ---
+import EyeClose from "../components/icons/EyeClose.astro";
+import EyeOpen from "../components/icons/EyeOpen.astro";
 import Spinner from "../components/Spinner.astro";
 import AuthLayout from "../layouts/AuthLayout.astro";
 ---
 
 <AuthLayout title="Inicia Sesión | PPAM Malabo">
-    <h1 class="text-center text-lg font-semibold">
+    <h1 class="text-center text-md">
         PPAM Malabo
     </h1>
-    <h3 class="text-center text-4xl font-bold w-1/2 mx-auto text-pretty">Bienvenido a la página de el PPAM de Malabo</h3>
-    <div class="max-w-5xl mx-auto mt-5 bg-white p-5 rounded-lg shadow-lg ">
+    <h3 class="text-center text-2xl md:text-4xl font-bold md:w-1/2 mx-auto text-balance">Gestiona tus horarios y turnos en un solo lugar</h3>
+    <div class="max-w-5xl mx-auto mt-5 bg-white p-5 rounded-lg shadow-lg">
         <form class="space-y-4 w-full">
             <div class="space-y-2">
                 <label for="email" class="text-gray-700">Tu correo</label>
                 <input
                     name="email"
-                    class="w-full h-10 border-2 border-gray-500 p-5 rounded-lg focus:border-cyan-600"
+                    class="w-full h-10 border-2 border-gray-300 p-5 rounded-lg focus:outline-none"
                     type="text"
                     id="email"
                     placeholder="correo@gmail.com"
@@ -22,13 +24,17 @@ import AuthLayout from "../layouts/AuthLayout.astro";
             </div>
             <div class="space-y-2">
                 <label for="password" class="text-gray-700">Tu contraseña</label>
-                <input
-                    name="password"
-                    class="w-full h-10 border-2 border-gray-500 p-5 rounded-lg focus:border-cyan-600"
-                    type="password"
-                    id="password"
-                    placeholder="******"
-                />
+                <div class="border-2 border-gray-300 rounded-lg flex justify-between items-center">
+                    <input
+                        name="password"
+                        class="w-full h-10 p-5 rounded-lg focus:outline-none"
+                        type="password"
+                        id="password"
+                        placeholder="******"
+                    />
+                    <EyeClose classList="size-6 mr-3 cursor-pointer" id="eye-close"/>
+                    <EyeOpen classList="size-6 hidden mr-3 cursor-pointer" id="eye-open"/> 
+                </div>
             </div>
             <button
                 class="bg-cyan-600 py-2 text-white rounded-md w-full hover:bg-cyan-700 transition-colors"
@@ -47,10 +53,23 @@ import AuthLayout from "../layouts/AuthLayout.astro";
 </AuthLayout>
 
 <script>
+
+
+    import { Notyf } from 'notyf';
+    import 'notyf/notyf.min.css';
+
+    const notyf = new Notyf({
+        duration: 4000,
+    });
+
+    //Query Selectors
     const form = document.querySelector("form") as HTMLFormElement;
     const spinner = document.querySelector('#login-spinner');
     const btnSubmit = document.querySelector("#btnSubmit") as HTMLButtonElement;
     const loginText = document.querySelector("#login-btn-text") as HTMLSpanElement;
+    const oEye = document.querySelector('#eye-open'); 
+    const cEye = document.querySelector('#eye-close'); 
+    const passInput = document.querySelector('#password') as HTMLInputElement
 
     const { signIn } = await import("auth-astro/client");
 
@@ -73,16 +92,28 @@ import AuthLayout from "../layouts/AuthLayout.astro";
             if (!resp) {
                 window.location.replace("/");
             } else {
-                console.log("Correo o contraseña incorrectos");
+                notyf.error('Usuario o contraseña incorrectos');
                 btnSubmit.removeAttribute("disabled");
                 loginText.classList.remove('hidden')
                 spinner.classList.add('hidden')
             }
         } catch (error) {
-            console.error("Error en la autenticación:", error);
+            notyf.error('Error del servidor. Inténtalo más tarde');
             btnSubmit.removeAttribute("disabled");
             loginText.classList.remove('hidden')
             spinner.classList.add('hidden')
         }
     });
+
+    cEye.addEventListener('click', () => {
+        cEye.classList.add('hidden');
+        oEye.classList.remove('hidden')
+        passInput.type = 'text'
+    })
+
+    oEye.addEventListener('click', () => {
+        cEye.classList.remove('hidden');
+        oEye.classList.add('hidden')
+        passInput.type = 'password'
+    })
 </script>
