--- a/src/layouts/AuthLayout.astro
+++ b/src/layouts/AuthLayout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<main class="bg-slate-100 h-screen flex flex-col justify-center text-gray-900">
+		<main class="bg-slate-100 h-screen flex flex-col justify-center text-gray-900 relative">
 			<slot />
 		</main>
 	</body>
