--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -1,4 +1,5 @@
 ---
+import Check from "../components/icons/Check.astro";
 import EyeClose from "../components/icons/EyeClose.astro";
 import EyeOpen from "../components/icons/EyeOpen.astro";
 import Spinner from "../components/Spinner.astro";
@@ -6,10 +7,12 @@ import AuthLayout from "../layouts/AuthLayout.astro";
 ---
 
 <AuthLayout title="Inicia Sesión | PPAM Malabo">
-    <h1 class="text-center text-md">
-        PPAM Malabo
-    </h1>
-    <h3 class="text-center text-2xl md:text-4xl font-bold md:w-1/2 mx-auto text-balance">Gestiona tus horarios y turnos en un solo lugar</h3>
+    <h1 class="text-center text-md">PPAM Malabo</h1>
+    <h3
+        class="text-center text-2xl md:text-4xl font-bold md:w-1/2 mx-auto text-balance"
+    >
+        Disponibilidad y Horarios
+    </h3>
     <div class="max-w-5xl mx-auto mt-5 bg-white p-5 rounded-lg shadow-lg">
         <form class="space-y-4 w-full">
             <div class="space-y-2">
@@ -23,8 +26,11 @@ import AuthLayout from "../layouts/AuthLayout.astro";
                 />
             </div>
             <div class="space-y-2">
-                <label for="password" class="text-gray-700">Tu contraseña</label>
-                <div class="border-2 border-gray-300 rounded-lg flex justify-between items-center">
+                <label for="password" class="text-gray-700">Tu contraseña</label
+                >
+                <div
+                    class="border-2 border-gray-300 rounded-lg flex justify-between items-center"
+                >
                     <input
                         name="password"
                         class="w-full h-10 p-5 rounded-lg focus:outline-none"
@@ -32,31 +38,56 @@ import AuthLayout from "../layouts/AuthLayout.astro";
                         id="password"
                         placeholder="******"
                     />
-                    <EyeClose classList="size-6 mr-3 cursor-pointer" id="eye-close"/>
-                    <EyeOpen classList="size-6 hidden mr-3 cursor-pointer" id="eye-open"/> 
+                    <EyeClose
+                        classList="size-6 mr-3 cursor-pointer"
+                        id="eye-close"
+                    />
+                    <EyeOpen
+                        classList="size-6 hidden mr-3 cursor-pointer"
+                        id="eye-open"
+                    />
                 </div>
             </div>
             <button
                 class="bg-cyan-600 py-2 text-white rounded-md w-full hover:bg-cyan-700 transition-colors"
                 type="submit"
-                id="btnSubmit">
-                <Spinner classList="w-6 h-6 mx-auto hidden" id="login-spinner"/>
+                id="btnSubmit"
+            >
+                <Spinner
+                    classList="w-6 h-6 mx-auto hidden"
+                    id="login-spinner"
+                />
                 <span class="text-center" id="login-btn-text">
                     Iniciar sesión
                 </span>
             </button>
         </form>
 
-        <p class="mt-5 text-gray-600 text-md">¿Aún no tienes una cuenta?</p>
-        <a class="text-cyan-600 font-semibold underline hover:text-cyan-700 transition-colors" href="/signup">Crear cuenta</a>
+        <p class="mt-5 text-gray-600 text-md">¿Has olvidado tu contraseña?</p>
+        <button data-loginModal class="font-semibold text-cyan-600 underline">Recuperar contraseña</button>
+
+        <!-- Fondo con opacidad que cubre toda la pantalla -->
+        <div id="bg-modal" class="fixed inset-0 bg-gray-700 opacity-50 z-40 hidden"></div>
+
+        <!-- Contenedor del modal centrado -->
+        <div id="modal" class="fixed inset-0 items-center justify-center z-50 px-5 md:px-0 hidden">
+            <div class="bg-white px-4 py-6 rounded-lg shadow-2xl flex flex-col items-center w-full md:w-1/2 xl:w-1/4">
+                <span class="bg-green-200 rounded-full w-16 h-16 inline-flex justify-center items-center"
+                >
+                    <Check className="size-10 text-green-800"/>
+                </span>
+                <h5 class="mt-5 text-2xl font-semibold">Recuperar contraseña</h5>
+                <p class="text-center text-sm text-gray-700 mt-5">Si desea recuperar la contraseña ponte en contacto con los administradores y lo más pronto posible se le ayudará.</p>
+                <button data-closeModal class="mt-5 bg-cyan-600 w-full py-2 text-white rounded-lg hover:bg-cyan-700 transition-colors">Cerrar</button>
+            </div>
+        </div>
     </div>
 </AuthLayout>
 
+
 <script>
-
-
-    import { Notyf } from 'notyf';
-    import 'notyf/notyf.min.css';
+    import { Notyf } from "notyf";
+    import "notyf/notyf.min.css";
 
     const notyf = new Notyf({
         duration: 4000,
@@ -64,22 +95,27 @@ import AuthLayout from "../layouts/AuthLayout.astro";
 
     //Query Selectors
     const form = document.querySelector("form") as HTMLFormElement;
-    const spinner = document.querySelector('#login-spinner');
+    const spinner = document.querySelector("#login-spinner");
     const btnSubmit = document.querySelector("#btnSubmit") as HTMLButtonElement;
-    const loginText = document.querySelector("#login-btn-text") as HTMLSpanElement;
-    const oEye = document.querySelector('#eye-open'); 
-    const cEye = document.querySelector('#eye-close'); 
-    const passInput = document.querySelector('#password') as HTMLInputElement
+    const loginText = document.querySelector(
+        "#login-btn-text",
+    ) as HTMLSpanElement;
+    const oEye = document.querySelector("#eye-open");
+    const cEye = document.querySelector("#eye-close");
+    const passInput = document.querySelector("#password") as HTMLInputElement;
+    const openModal = document.querySelector('[data-loginModal]') as HTMLButtonElement
+    const closeModal = document.querySelector('[data-closeModal]') as HTMLButtonElement
+    const bgModal = document.querySelector('#bg-modal')
+    const modal = document.querySelector('#modal')
 
     const { signIn } = await import("auth-astro/client");
 
     form.addEventListener("submit", async (e) => {
         e.preventDefault();
         btnSubmit.setAttribute("disabled", "true");
-        loginText.classList.add('hidden')
-        spinner.classList.remove('hidden')
+        loginText.classList.add("hidden");
+        spinner.classList.remove("hidden");
 
-        
         const formData = new FormData(form);
 
         try {
@@ -92,28 +128,40 @@ import AuthLayout from "../layouts/AuthLayout.astro";
             if (!resp) {
                 window.location.replace("/");
             } else {
-                notyf.error('Usuario o contraseña incorrectos');
+                notyf.error("Usuario o contraseña incorrectos");
                 btnSubmit.removeAttribute("disabled");
-                loginText.classList.remove('hidden')
-                spinner.classList.add('hidden')
+                loginText.classList.remove("hidden");
+                spinner.classList.add("hidden");
             }
         } catch (error) {
-            notyf.error('Error del servidor. Inténtalo más tarde');
+            notyf.error("Error del servidor. Inténtalo más tarde");
             btnSubmit.removeAttribute("disabled");
-            loginText.classList.remove('hidden')
-            spinner.classList.add('hidden')
+            loginText.classList.remove("hidden");
+            spinner.classList.add("hidden");
         }
     });
 
-    cEye.addEventListener('click', () => {
-        cEye.classList.add('hidden');
-        oEye.classList.remove('hidden')
-        passInput.type = 'text'
+    cEye.addEventListener("click", () => {
+        cEye.classList.add("hidden");
+        oEye.classList.remove("hidden");
+        passInput.type = "text";
+    });
+
+    oEye.addEventListener("click", () => {
+        cEye.classList.remove("hidden");
+        oEye.classList.add("hidden");
+        passInput.type = "password";
+    });
+
+    //Modal
+    openModal.addEventListener('click', () => {
+        bgModal.classList.remove('hidden')
+        modal.classList.replace('hidden', 'flex')
     })
 
-    oEye.addEventListener('click', () => {
-        cEye.classList.remove('hidden');
-        oEye.classList.add('hidden')
-        passInput.type = 'password'
+    closeModal.addEventListener('click', () => {
+        bgModal.classList.add('hidden')
+        modal.classList.replace('flex', 'hidden')
     })
+
 </script>
